--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - webapp:./webapps
+      - webapp:/webapps
     depends_on:
       - dev
       
