--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3'
 services:
 
+  dev:
+    build: ./dev
+    volumes:
+      - webapp:/home/war
+
   prod:
     image: tomcat:latest
     ports:
       - "8080:8080"
     volumes:
       - webapp:/webapps
-
-  dev:
-    build: ./dev
-    volumes:
-      - webapp:/home/war
     depends_on:
-      - prod
+      - dev 
       
 volumes:
   webapp:
