change folder /usr/local/tomcat/webapps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - webapp:/webapps
+      - webapp:/usr/local/tomcat/webapps
     depends_on:
       - dev 
       
